# gold_and_silver_wallet

./: .gitignore  README.md  RELEASE.md  release.sh  start.bat  start.sh
gold_and_silver_wallet/: README.md  libsecp256k1.dylib  pubspec.yaml
gold_and_silver_wallet/android/app/: CMakeLists.txt  build.gradle.kts
gold_and_silver_wallet/android/app/src/main/: AndroidManifest.xml
gold_and_silver_wallet/android/app/src/main/kotlin/com/example/coldify_wallet/: MainActivity.kt
gold_and_silver_wallet/ios/: Podfile
gold_and_silver_wallet/ios/Runner/: Copy-Frameworks.sh  Info.plist
gold_and_silver_wallet/ios/Runner.xcodeproj/: project.pbxproj
gold_and_silver_wallet/lib/: main.dart
gold_and_silver_wallet/lib/models/: account_model.dart  balance_model.dart  network_model.dart  transaction_model.dart  wallet_model.dart
gold_and_silver_wallet/lib/screens/: account_view_screen.dart  create_wallet_screen.dart  entropy_input_screen.dart  home_screen.dart  import_wallet_screen.dart  mnemonic_display_screen.dart  password_setup_screen.dart  password_unlock_screen.dart  settings_screen.dart  wallet_detail_screen.dart
gold_and_silver_wallet/lib/services/: encrypted_storage.dart  network_service.dart  security_service.dart  transaction_service.dart  wallet_manager.dart  wallet_storage.dart
gold_and_silver_wallet/linux/: CMakeLists.txt
gold_and_silver_wallet/test/: widget_test.dart
gold_and_silver_wallet/windows/: CMakeLists.txt
hd_wallet/: pubspec.yaml
secp256k1_wrapper/: pubspec.yaml
secp256k1_wrapper/lib/: secp256k1_wrapper.dart
(+18 files in other folders)
